# llama.kt

./: .gitignore  CONTRIBUTING.md  README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro  settings.gradle.kts
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  error_tracker.cpp  error_tracker.h  gguf_lib.cpp
src/main/cpp/common/: chat.cpp
src/main/cpp/engine/: CMakeLists.txt  character-engine.cpp  character-engine.h  ggml-engine-internal.h  ggml-engine-vlm.cpp  ggml-engine.cpp  ggml-engine.h  llama-test-cli.cpp  rag-engine.cpp  rag-engine.h  rag-tests.inc  tool-manager.cpp  tool-manager.h
src/main/cpp/engine/vlm/: clip.cpp
src/main/cpp/ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
src/main/cpp/ggml/src/ggml-cpu/: ggml-cpu.c
src/main/cpp/llama.cpp/: CMakeLists.txt
src/main/cpp/llama.cpp/common/: CMakeLists.txt  chat-parser.cpp  chat.cpp  common.cpp  common.h  universal-toolcall.cpp  universal-toolcall.h
src/main/cpp/llama.cpp/engine/: CMakeLists.txt  engine-utils.h  ggml-engine-internal.h  ggml-engine-vlm.cpp  ggml-engine.cpp  ggml-engine.h  kernel-microbench.cpp  power-engine.cpp  power-engine.h  rag-engine.cpp  rag-engine.h  thread-engine.cpp  thread-engine.h  tn-log.cpp  tn-log.h  vlm-bench.cpp  vlm_kv_cache.cpp  vlm_kv_cache.h  vt_cache.cpp  vt_cache.h
src/main/cpp/llama.cpp/engine/vlm/: clip-graph.h  clip-impl.h  clip-model.h  clip.cpp  mtmd-helper.cpp  mtmd.cpp
src/main/cpp/llama.cpp/ggml/: CMakeLists.txt
src/main/cpp/llama.cpp/ggml/src/: CMakeLists.txt  ggml.c
src/main/cpp/llama.cpp/ggml/src/ggml-cpu/: CMakeLists.txt  ops.cpp  vec.h
src/main/cpp/llama.cpp/ggml/src/ggml-cpu/kleidiai/: kleidiai.cpp
src/main/cpp/llama.cpp/ggml/src/ggml-vulkan/: CMakeLists.txt
src/main/cpp/llama.cpp/include/: llama.h
src/main/cpp/llama.cpp/src/: llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-hparams.cpp  llama-hparams.h  llama-mmap.cpp  llama-model.cpp  llama-model.h  llama-vocab.cpp  unicode.cpp
src/main/cpp/llama.cpp/src/models/: gemma3n-iswa.cpp  gemma4-iswa.cpp  models.h
src/main/cpp/rag_ingest/: rag_ingest.cpp  rag_ingest.h  rag_ingest_html.cpp  rag_ingest_pdf.cpp  rag_ingest_zip.cpp
src/main/cpp/text_digest/: text_digest.cpp  text_digest.h
src/main/java/com/dark/gguf_lib/: AudioTranscriber.kt  CharacterEngine.kt  ContextInfo.kt  ConversationManager.kt  DocKind.kt  EmbeddingEngine.kt  ErrorTracker.kt  GGMLEngine.kt  GGUFNativeLib.kt  GpuProfile.kt  HardwareEngine.kt  ImageQuality.kt  LifecycleAwareEngine.kt  LlamaKt.kt  ModelDownloader.kt  RAGEngine.kt  StructuredOutput.kt  StructuredOutputExtensions.kt  TextDigest.kt  ToolManager.kt  VlmEncoder.kt  VlmPrewarmEvent.kt
src/main/java/com/dark/gguf_lib/models/: DecodingMetrics.kt  EmbeddingCallback.kt  EmbeddingResult.kt  GenerationEvent.kt  ModelInfo.kt  RAGResult.kt  StreamCallback.kt  VlmPrewarmCallback.kt
src/main/java/com/dark/gguf_lib/toolcalling/: AnnotatedToolExecutor.kt  GrammarMode.kt  ToolCall.kt  ToolCallResult.kt  ToolCallingConfig.kt  ToolDefinitionBuilder.kt
